# optimum-tpu

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  debugging.py  install-jetstream-pt.sh  install-on-TPU-v4.sh  pyproject.toml  requirements.txt  server.py  setup.cfg  setup.py  xla_add.py
.github/workflows/: check_code_quality.yml  debug-dind.yml  debug-metadata.yml  doc-build.yml  doc-pr-build.yml  pypi-release.yaml  secrets-leak.yml  test-integration-test.yml  test-pytorch-xla-tpu-tgi-integration.yml  test-pytorch-xla-tpu-tgi-jetstream.yml  test-pytorch-xla-tpu-tgi-nightly-jetstream.yml  test-pytorch-xla-tpu-tgi-nightly.yml  test-pytorch-xla-tpu-tgi.yml  test-pytorch-xla-tpu.yml  test-quickie.yml  tpu-tgi-release.yml  upload_pr_documentation.yml
debug-dind/: Dockerfile  xla_add.py
debug-dind-locally/: Dockerfile  Dockerfile.dind  README.md  docker-compose.yml  test.py  xla_add.py
docs/scripts/: auto-generate-examples.py  examples_list.yml
docs/source/: _toctree.yml  contributing.mdx  index.mdx  installation.mdx  optimum_container.mdx  supported-architectures.mdx
docs/source/conceptual_guides/: difference_between_jetstream_and_xla.mdx  tpu_hardware_support.mdx
docs/source/howto/: advanced-tgi-serving.mdx  deploy-gke.md  deploy.mdx  deploy_instance_on_ie.mdx  gcloud_cli.mdx  installation_inside_a_container.mdx  more_examples.mdx  overview.mdx  serving.mdx  training.mdx
docs/source/reference/: fsdp_v2.mdx  tgi_advanced_options.mdx
docs/source/tutorials/: inference_on_tpu.mdx  overview.mdx  tpu_setup.mdx  training_on_tpu.mdx
examples/: README.md
examples/custom/: llama_train.py
examples/gke/configs-tgi/: deployment.yaml
examples/language-modeling/: gemma_tuning.ipynb  llama2_tuning.md  llama_tuning.ipynb  llama_tuning.md  run_clm.py
examples/text-generation/: generation.py  generation_gemma.py
optimum/tpu/: __init__.py  cache.py  cli.py  distributed_model.py  fsdp_v2.py  jetstream_pt_support.py  model.py  modeling.py  modeling_gemma.py  modeling_llama.py  modeling_mistral.py  static_cache_xla.py  trainer.py  version.py  xla_logger.py  xla_model_parallel.py  xla_mp_comm.py  xla_parallel_proxy.py
optimum/tpu/generation/: __init__.py  logits_process.py  token_selector.py
tests/: akg.py  conftest.py  llama3.2-test-distributed-model.py  test-torch-xla.py  test_distributed_model.py  test_parallel_proxy.py
tests/single_thread/: test_cache.py
text-generation-inference/: Cargo.toml  Dockerfile  README.md  entrypoint.sh
text-generation-inference/docker/: Dockerfile  Dockerfile-old  check-network.sh  entrypoint.sh
text-generation-inference/integration-tests/: conftest.py  requirements.txt  test_gemma.py  test_gpt2.py  test_model.py
text-generation-inference/server/: Makefile  build-requirements.txt  pyproject.toml
text-generation-inference/server/text_generation_server/: auto_generator.py  cli.py  generator.py  generator_base.py  model.py  modeling.py  modelling.py  server.py  version.py
text-generation-inference/server/text_generation_server/jetstream_pt_support/: __init__.py  compatibility.py  engine.py  engine_loader.py  generator.py  llama_model_exportable_hf.py  logits_process.py  token_selector.py
text-generation-inference/server/text_generation_server/jetstream_pt_support/models/: __init__.py  gemma_model_hf.py  llama_model_exportable_hf.py  mixtral_model_hf.py  qwen2_model.py  qwen2_model_v2.py
text-generation-inference/tests/: conftest.py  decode_tests_utils.py  helpers.py  pytest.ini  test_decode.py  test_decode_jetstream.py  test_decode_jetstream_quant.py  test_gemma.py  test_gemma_2b.py  test_gemma_2b_benchmark.py  test_gemma_7b.py  test_generator.py  test_generator_gemma.py  test_generator_slot.py  test_gpt2.py  test_llama3_8b.py  test_prefill_truncate.py  test_qwen2.py  test_tinyllama.py  test_warmup.py
