#  Copyright 2022 The HuggingFace Team. All rights reserved.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
[project]
name = "optimum-tpu"
dynamic = ["version"]
authors=[
    { name = "HuggingFace Inc. Machine Learning Optimization Team", email = "hardware@huggingface.co"}
]
description = "Optimum TPU is the interface between the Hugging Face Transformers library and Google Cloud TPU devices."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "transformers",
    "fine-tuning",
    "inference",
    "tpu",
    "cloud-tpu",
    "gcp",
    "google-cloud"
]

dependencies = [
    "transformers == 4.38.1",
    "torch-xla>=2.2.0",
    "torch>=2.2.0",
    "loguru == 0.6.0"
]

[project.optional-dependencies]
tests = ["pytest", "safetensors"]
quality = ["black", "ruff", "isort",]

[project.urls]
Homepage = "https://hf.co/hardware"
Documentation = "https://hf.co/docs/optimum/tpu"
Repository = "https://github.com/huggingface/optimum-tpu"
Issues = "https://github.com/huggingface/optimum-tpu/issues"

[tool.setuptools.dynamic]
version = {attr = "optimum.tpu.__version__"}

[tool.setuptools.packages.find]
include = ["optimum.tpu"]

[tool.black]
line-length = 119
target-version = ['py38']
extend-exclude = '.ipynb'

[lint.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[lint.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[lint.ruff.isort]
lines-after-imports = 2
known-first-party = ["optimum.tpu"]

[tool.pytest.ini_options]
markers = [
    "is_staging_test",
]
