[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-generation-server"
version = "VERSION"
authors = [{name="Alvaro Moran", email="alvaro.moran@huggingface.co" }]
description = "TGI compatible inference server for Google TPU platforms"
dependencies = [
    'protobuf > 3.20.1, < 5',
    'grpcio == 1.62.0',
    'grpcio-status == 1.62.0',
    'grpcio-reflection == 1.62.0',
    'grpc-interceptor == 0.15.2',
    'typer == 0.6.1',
    'safetensors == 0.4.2',
    'transformers == 4.38.1',
    'loguru == 0.6.0'
]

[tool.setuptools]
packages = ["text_generation_server", "text_generation_server.pb"]

[project.scripts]
text-generation-server = 'text_generation_server.cli:app'
