[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-generation-server"
version = "0.1.0.dev0"
authors = [{name="Alvaro Moran", email="alvaro.moran@huggingface.co" }]
description = "TGI compatible inference server for Google TPU platforms"
dependencies = [
    'protobuf',
    'grpcio == 1.62.1',
    'grpcio-status == 1.62.1',
    'grpcio-reflection == 1.62.1',
    'grpc-interceptor == 0.15.2',
    'typer == 0.6.1',
    'safetensors == 0.4.2',
    'transformers == 4.38.1',
    'loguru == 0.6.0'
]

[tool.setuptools]
packages = ["text_generation_server", "text_generation_server.pb"]

[project.scripts]
text-generation-server = 'text_generation_server.cli:app'
