[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "text-generation-server"
dynamic = ["version"]
authors = [{name="Alvaro Moran", email="alvaro.moran@huggingface.co" }]
description = "TGI compatible inference server for Google TPU platforms"
dependencies = [
    'protobuf',
    'grpcio == 1.62.1',
    'grpcio-status == 1.62.1',
    'grpcio-reflection == 1.62.1',
    'grpc-interceptor == 0.15.2',
    'typer == 0.6.1',
    'safetensors == 0.4.2',
    'transformers == 4.43.3',
    'loguru == 0.6.0',
    "sentencepiece == 0.2.0",
    "numpy<2.0",
]

[tool.setuptools]
packages = ["text_generation_server", "text_generation_server.pb"]

[tool.setuptools.dynamic]
version = {attr = "text_generation_server.version.__version__"}

[project.scripts]
text-generation-server = 'text_generation_server.cli:app'
